[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/general/VarsAndDesign.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/NAWI-finish2.png" type="Texture" id=2]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=3]
[ext_resource path="res://src/rooms/Room_TH_NAWI.gd" type="Script" id=4]
[ext_resource path="res://font/besley/Besley-Fatface.otf" type="DynamicFontData" id=5]
[ext_resource path="res://graphics/general/Note2.png" type="Texture" id=6]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[node name="RoomNAWI" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="BackButton" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 108.0
margin_top = 594.0
margin_right = 208.0
margin_bottom = 674.0
rect_rotation = 180.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundUnfocus" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.729412, 0.729412, 0.729412, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note2" type="Sprite" parent="CanvasLayer/DialogBox"]
position = Vector2( 542.677, 320 )
scale = Vector2( 0.48824, 0.488241 )
texture = ExtResource( 6 )

[node name="DialogOkButton" type="TouchScreenButton" parent="CanvasLayer/DialogBox"]
position = Vector2( 699.294, 383.8 )
scale = Vector2( 0.100854, 0.135635 )
normal = ExtResource( 3 )

[node name="Content" type="Label" parent="CanvasLayer/DialogBox"]
margin_left = 267.0
margin_top = 200.0
margin_right = 775.0
margin_bottom = 379.0
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 512.185, 300 )
scale = Vector2( 0.623053, 0.623053 )
texture = ExtResource( 2 )

[node name="instagramButton" type="TouchScreenButton" parent="CanvasLayer2/Sprite"]
visible = false
position = Vector2( -139.868, -430.509 )
scale = Vector2( 0.238521, 0.0769681 )
normal = ExtResource( 3 )

[node name="youtubeButton" type="TouchScreenButton" parent="CanvasLayer2/Sprite"]
visible = false
position = Vector2( -149.446, -266.918 )
scale = Vector2( 0.225292, 0.10256 )
normal = ExtResource( 3 )

[node name="VarsAndDesign" parent="CanvasLayer2" instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0

[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="released" from="CanvasLayer/DialogBox/DialogOkButton" to="." method="_on_DialogOkButton_released"]
[connection signal="released" from="CanvasLayer2/Sprite/instagramButton" to="." method="_on_instagramButton_released"]
[connection signal="released" from="CanvasLayer2/Sprite/youtubeButton" to="." method="_on_youtubeButton_released"]
